--- a/css/prueba.css
+++ b/css/prueba.css
@@ -79,6 +79,7 @@ rect {
 .tipoDeJuego {
   width: 90%;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 /*------------------------------------------------------------
               NAV        
@@ -237,7 +238,7 @@ ul {
 
 .important-game {
   width: 100%;
-  height: 46vh;
+  height: 55vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -364,6 +365,9 @@ nav p {
   box-shadow: 0px 4px rgba(196, 196, 196, 0.25);
 }
 */
+/*                         BIBLOTECA    
+ */
+
 .biblioteca {
   margin-bottom: 1rem;
   background-color: #0080d5;
@@ -376,48 +380,6 @@ nav p {
 .biblioteca .swiper-main {
   width: 100%;
   height: 100%;
-}
-.swiper-slide {
-  position: relative;
-  text-align: start;
-  background: #fff;
-  border-radius: 15px;
-  box-shadow: 0px 4px rgba(196, 196, 196, 0.25);
-}
-.swiper-slide:hover img {
-  filter: blur(5px);
-}
-.swiper-slide .card-tittle p {
-  font-size: 0.8rem;
-}
-.swiper-slide .card-text p {
-  font-size: 1.1rem;
-  color: black;
-  width: 60%;
-}
-
-.card-text {
-  display: flex;
-}
-
-.card-text p.free:nth-child(2) {
-  display: flex;
-  justify-content: end;
-  width: 40%;
-  color: #0f0;
-}
-.card-text p.pay:nth-child(2) {
-  display: flex;
-  justify-content: end;
-  width: 40%;
-  color: #f33;
-}
-.card-text p span img {
-  display: flex;
-  justify-content: start;
-  width: 40px;
-  height: 26px;
-  padding-right: 10px;
 }
 .biblioteca .swiper-slide img {
   display: block;
@@ -533,22 +495,69 @@ nav p {
   margin-top: 5.3rem !important;
   top: auto !important;
 }
+/*
+              ULTIMOS LANZAMIENTOS
+*/
 
+.ultimosLanzamientos {
+  margin-bottom: 1rem;
+  background-color: #0080d5;
+  border-radius: 15px;
+  width: 90%;
+  padding: 20px 20px;
+  overflow: hidden;
+  z-index: 0;
+}
+.ultimosLanzamientos .swiper-main {
+  width: 100%;
+  height: 100%;
+}
+.ultimosLanzamientos .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.ultimosLanzamientos .card-descripcion {
+  padding: 0.3rem 0.5rem 0.5rem;
+  background-color: #005d9b;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.ultimosLanzamientos .card-descripcion .card-tittle {
+  font-size: 1rem;
+}
+.ultimosLanzamientos .swiper-button-next,
+.ultimosLanzamientos .swiper-button-prev {
+  right: 26px !important;
+  margin-top: 11rem !important;
+  top: auto !important;
+}
+
+/* ********************************--------------------------------------------------*/
 footer {
   height: calc(100%);
-  margin-top: 1rem;
+  margin-top: 2rem;
   background-color: #003366;
   display: grid;
   padding: 0%;
+  width: 100%;
+  justify-items: center;
 }
 footer .image-container2 {
   display: grid;
   justify-items: center;
+  align-content: center;
   height: 106%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .image-container2 img {
   height: 6rem;
-  width: auto;
+  width: 40%;
 }
 .image-container2 {
   width: 100%;
@@ -584,10 +593,24 @@ u {
   padding: 35px;
 }
 .image-container2 img:first-child {
-  width: 80%;
+  width: 90%;
   height: 80%;
 }
-
-.image {
-  height: 150px;
+.footer-copyright-redes {
+  display: flex;
+  justify-content: start;
+  width: 90%;
+  height: auto;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top: 2px solid white;
+}
+.footer-copyright-redes p {
+  width: 100%;
+}
+.footer-copyright-redes svg {
+  display: flex;
+  justify-content: end;
+  align-content: center;
+  width: 5%;
 }
