--- a/css/style.css
+++ b/css/style.css
@@ -89,25 +89,7 @@ a {
   justify-content: center;
 }
 
-.load {
-  pointer-events: none;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: white;
-  animation: animationButton 1s ease infinite;
-}
 
-@keyframes animationButton {
-  0% {
-    transform: rotate(0turn);
-  }
-
-  100% {
-    transform: rotate(1turn);
-  }
-}
 
 button {
   border: 0;
@@ -245,6 +227,8 @@ u {
   animation: bounce 0.7s;
 }
 
+
+
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
@@ -257,4 +241,50 @@ u {
   }
 
   
+}
+
+.load {
+  pointer-events: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: rgb(255, 255, 255);
+  animation: animationButton 1s ease infinite;
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes animationButton {
+  0% {
+    transform: rotate(0turn);
+  }
+
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
+.fill-button {
+  width: 380px;
+  height: 50px;
+  background-color: transparent;
+  border: 2px solid #000;
+  position: relative;
+  overflow: hidden;
+}
+
+.fill-button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #2f00ff; 
+  transition: width 5s ease; 
+}
+
+.fill-button.clicked::after {
+  width: 100%;
 }
